--- a/css/custom.css
+++ b/css/custom.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   font-family: Helvetica, sans-serif;
-  color: white;
+    color: rgba(255, 255, 255, 0.8);
   font-weight: 300;
 }
 
@@ -174,4 +174,50 @@ body {
 
 .playerNameField--input:focus {
   outline: none;
+}
+
+.header {
+  border-top: 4px solid #7872E8;
+  color: #555;
+  letter-spacing: 1px;
+  font-size: 21px;
+  font-weight: 400;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 1px solid #AAA;
+  padding-right: 36px;
+}
+
+.header:after {
+  content: '';
+  display: block;
+  clear: both;
+}
+
+.logo {
+  width: 200px;
+  float: left;
+}
+
+.title {
+  flex-grow: 1;
+}
+
+.rollDice {
+  background-color: #7872E8;
+  text-align: center;
+  padding: 24px;
+    border-bottom: 5px solid white;
+}
+
+.content {
+  flex-grow: 1;
+  background-color: #DDD;
+  padding: 50px;
+}
+
+.header--close {
+  -webkit-text-stroke: 2px white;
 }
