Somehow this got removed.

--- a/css/custom.css
+++ b/css/custom.css
@@ -74,6 +74,8 @@ body {
 
 .icon-close {
   font-size : 18px;
+  float: right;
+  -webkit-text-stroke: 1px #7872E8;
 }
 
 .playerModal--body {
@@ -219,4 +221,6 @@ body {
   flex-grow        : 1;
 }
 
-.header--close {}
+.header--close {
+  -webkit-text-stroke: 1px white;
+}
