--- a/css/board.css
+++ b/css/board.css
@@ -1,110 +1,120 @@
 .wrapper {
-  display        : flex;
-  height         : 100vh;
-  flex-direction : column;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
 }
 
 .container {
-  display   : flex;
-  flex-grow : 1;
+  display: flex;
+  flex-grow: 1;
 }
 
 .leftSidebar {
-  z-index          : 5;
-  width            : 400px;
-  background-color : #C5C3F4;
-  box-shadow       : 0 5px 10px rgba(0, 0, 0, 0.3);
+  z-index: 5;
+  width: 400px;
+  background-color: #c5c3f4;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, .3);
 }
 
 .grid {
-  width  : 700px;
-  margin : auto;
+  width: 630px;
+  margin: auto;
 }
 
 .row:after {
-  content : '';
-  display : block;
-  clear   : both;
+  display: block;
+  clear: both;
+  content: '';
 }
 
 .row-reverse {
-  display        : flex;
-  flex-direction : row-reverse;
+  display: flex;
+  flex-direction: row-reverse;
 }
 
 .cell {
-  box-sizing       : border-box;
-  width            : 50px;
-  height           : 50px;
-  float            : left;
-  border           : 1px solid white;
-  background-image : url('../images/cellbg.png');
-  background-size  : cover;
+  display: flex;
+  float: left;
+  box-sizing: border-box;
+  width: 45px;
+  height: 45px;
+  border: 1px solid white;
+  background-image: url('../images/cellbg.png');
+  background-size: cover;
+  align-items: center;
+  justify-content: center;
 }
 
 .cell-starred {
-  background-image : url('../images/starcell.png');
+  background-image: url('../images/starcell.png');
 }
 
 .board--players {
-  padding        : 24px;
-  border-bottom  : 1px solid white;
-  text-transform : uppercase;
-  font-size      : 21px;
+  font-size: 21px;
+  padding: 24px;
+  text-transform: uppercase;
+  border-bottom: 1px solid white;
 }
 
 .board--player {
-  margin           : 24px;
-  background-color : rgba(255, 255, 255, 0.7);
+  margin: 24px;
+  background-color: rgba(255, 255, 255, .7);
 }
 
 .board--playerNumber {
-  display          : inline-block;
-  width            : 30px;
-  padding          : 12px;
-  background-color : green;
-  text-align       : center;
-  font-weight      : bold;
+  font-weight: bold;
+  display: inline-block;
+  width: 30px;
+  padding: 12px;
+  text-align: center;
+  background-color: green;
 }
 
 .board--playerNumber-1 {
-  background-color : #92BF64;
+  background-color: #92bf64;
 }
 
 .board--playerNumber-2 {
-  background-color : #EAA845;
+  background-color: #eaa845;
 }
 
 .board--playerNumber-3 {
-  background-color : #B5405B;
+  background-color: #b5405b;
 }
 
 .board--playerNumber-4 {
-  background-color : #406DB2;
+  background-color: #406db2;
 }
 
 .board--playerNumber-5 {
-  background-color : #B240AC;
+  background-color: #b240ac;
 }
 
 .board--playerNumber-6 {
-  background-color : #E5DF72;
+  background-color: #e5df72;
 }
 
 .board--playerName {
-  display : inline-block;
-  padding : 12px;
-  color   : #555;
+  display: inline-block;
+  padding: 12px;
+  color: #555;
 }
 
 .board--startOver {
-  width            : calc(100% - 48px);
-  margin           : 24px;
-  color            : white;
-  border           : 1px solid white;
-  background-color : #C5C3F4;
+  width: calc(100% - 48px);
+  margin: 24px;
+  color: white;
+  border: 1px solid white;
+  background-color: #c5c3f4;
 }
 
 .board--startOver:hover {
-  background-color : #7872E8;
+  background-color: #7872e8;
+}
+
+.player {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  box-shadow: 0 3px 5px rgba(0, 0, 0, .4);
 }
