--- a/css/custom.css
+++ b/css/custom.css
@@ -1,227 +1,230 @@
 body {
-  margin      : 0;
-  color       : rgba(255, 255, 255, 0.8);
-  font-family : Helvetica,
-                sans-serif;
-  font-weight : 300;
+  font-family: Helvetica, sans-serif;
+  font-weight: 300;
+  margin: 0;
+  color: rgba(255, 255, 255, .8);
 }
 
 .start {
-  position          : absolute;
-  top               : 0;
-  left              : 0;
-  width             : 100%;
-  height            : 100%;
-  overflow          : hidden;
-  background-image  : url('../images/landing1.png');
-  background-color  : #7CDFEB;
-  background-repeat : no-repeat;
-  background-size   : 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  background-color: #7cdfeb;
+  background-image: url('../images/landing1.png');
+  background-repeat: no-repeat;
+  background-size: 100%;
 }
 
 .button {
-  display        : block;
-  margin         : auto;
-  padding        : 10px 35px;
-  border         : 0;
-  text-transform : uppercase;
-  font-size      : 21px;
-  font-weight    : 300;
-  letter-spacing : 2px;
-  transition     : background-color 300ms ease;
-  cursor         : pointer;
+  font-size: 21px;
+  font-weight: 300;
+  display: block;
+  margin: auto;
+  padding: 10px 35px;
+  cursor: pointer;
+  transition: background-color 300ms ease;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  border: 0;
 }
 
 .play {
-  margin-top       : 39.3%;
-  color            : white;
-  background-color : #E1704B;
+  margin-top: 39.3%;
+  color: white;
+  background-color: #e1704b;
 }
 
 .play:hover {
-  background-color : #B0322F;
+  background-color: #b0322f;
 }
 
 .play:focus {
-  outline : none;
+  outline: none;
 }
 
 .overlay {
-  position         : absolute;
-  top              : 0;
-  left             : 0;
-  width            : 100%;
-  height           : 100%;
-  background-color : rgba(0, 0, 0, 0.5);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, .5);
 }
 
 .modal {
-  width            : 600px;
-  margin           : 12% auto;
-  background-color : white;
+  width: 600px;
+  margin: 12% auto;
+  background-color: white;
 }
 
 .modal--header {
-  padding          : 10px;
-  background-color : #7872E8;
-  text-align       : center;
-  font-size        : 18px;
+  font-size: 18px;
+  padding: 10px;
+  text-align: center;
+  background-color: #7872e8;
 }
 
 .modal--body {
-  padding : 20px;
+  padding: 20px;
 }
 
 .icon-close {
+  font-size: 18px;
   float: right;
-  font-size : 18px;
-  -webkit-text-stroke: 1px #7872E8;
+  cursor: pointer;
+  -webkit-text-stroke: 1px #7872e8;
 }
 
 .playerModal--body {
-  width  : 75%;
-  margin : 20px auto;
+  width: 75%;
+  margin: 20px auto;
 }
 
 .playerModal--select {
-  position : relative;
-  margin   : 20px auto 5px;
-  padding  : 12px;
-  color    : #C5C3F4;
-  border   : 1px solid #7872E8;
-  cursor   : pointer;
+  position: relative;
+  margin: 20px auto 5px;
+  padding: 12px;
+  cursor: pointer;
+  color: #c5c3f4;
+  border: 1px solid #7872e8;
 }
 
 .playerModal--select-is-selected {
-  color : #7872E8;
+  color: #7872e8;
 }
 
 .icon-caret {
-  float      : right;
-  margin-top : 3px;
-  color      : #7872E8;
-  font-size  : 10px;
+  font-size: 10px;
+  float: right;
+  margin-top: 3px;
+  color: #7872e8;
 }
 
 .playerModal--peopleIcon {
-  display : block;
-  width   : 100px;
-  margin  : 0 auto 15px;
+  display: block;
+  width: 100px;
+  margin: 0 auto 15px;
 }
 
 .playerModal--options {
-  display          : inline-block;
-  position         : absolute;
-  top              : 50px;
-  right            : 0;
-  color            : #7872E8;
-  background-color : white;
-  box-shadow       : 0 0 5px #C5C3F4;
+  position: absolute;
+  top: 50px;
+  right: 0;
+  display: inline-block;
+  color: #7872e8;
+  background-color: white;
+  box-shadow: 0 0 5px #c5c3f4;
 }
 
 .playerModal--option {
-  padding : 10px;
-  cursor  : pointer;
+  padding: 10px;
+  cursor: pointer;
 }
 
 .playerModal--option:hover {
-  background-color : #F2F2F2;
+  background-color: #f2f2f2;
 }
 
 .modalButton {
-  display          : inline-block;
-  margin-top       : 20px;
-  background-color : #7872E8;
+  display: inline-block;
+  margin-top: 20px;
+  background-color: #7872e8;
 }
 
 .modalButton-is-disabled {
-  opacity : 0.5;
-  cursor  : default;
+  cursor: default;
+  opacity: .5;
 }
 
 .playerModal--disclaimer {
-  color     : #CCC;
-  font-size : 12px;
+  font-size: 12px;
+  color: #ccc;
 }
 
 .playerNameField--field {
-  position : relative;
-  margin   : 20px auto;
-  border   : 1px solid #C5C3F4;
-  cursor   : pointer;
+  position: relative;
+  margin: 20px auto;
+  cursor: pointer;
+  border: 1px solid #c5c3f4;
 }
 
 .playerNameField--field-is-filled {
-  border-color : #7872E8;
+  border-color: #7872e8;
 }
 
 .playerNameField--prompt {
-  display          : inline-block;
-  width            : 60px;
-  padding          : 12px;
-  color            : white;
-  background-color : #C5C3F4;
+  display: inline-block;
+  width: 60px;
+  padding: 12px;
+  color: white;
+  background-color: #c5c3f4;
 }
 
 .playerNameField--prompt-is-filled {
-  background-color : #7872E8;
+  background-color: #7872e8;
 }
 
 .playerNameField--input {
-  display   : inline-block;
-  width     : calc(100% - 110px);
-  padding   : 10px;
-  border    : 0;
-  font-size : 16px;
+  font-size: 16px;
+  display: inline-block;
+  width: calc(100% - 110px);
+  padding: 10px;
+  border: 0;
 }
 
 .playerNameField--input:focus {
-  outline : none;
+  outline: none;
 }
 
 .header {
-  display         : flex;
-  padding-right   : 36px;
-  color           : #555;
-  border-top      : 4px solid #7872E8;
-  border-bottom   : 1px solid #AAA;
-  text-align      : center;
-  align-items     : center;
-  font-size       : 21px;
-  font-weight     : 400;
-  justify-content : space-between;
-  letter-spacing  : 1px;
+  font-size: 21px;
+  font-weight: 400;
+  display: flex;
+  padding-right: 36px;
+  text-align: center;
+  letter-spacing: 1px;
+  color: #555;
+  border-top: 4px solid #7872e8;
+  border-bottom: 1px solid #aaa;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .header:after {
-  content : '';
-  display : block;
-  clear   : both;
+  display: block;
+  clear: both;
+  content: '';
 }
 
 .logo {
-  width : 200px;
-  float : left;
+  float: left;
+  width: 200px;
 }
 
 .title {
-  flex-grow : 1;
+  flex-grow: 1;
 }
 
 .rollDice {
-  padding          : 24px;
-  border-bottom    : 5px solid white;
-  background-color : #7872E8;
-  text-align       : center;
+  padding: 24px;
+  text-align: center;
+  border-bottom: 5px solid white;
+  background-color: #7872e8;
 }
 
 .content {
-  padding          : 50px;
-  background-color : #DDD;
-  flex-grow        : 1;
+  padding: 80px;
+  background-color: #ddd;
+  background-image: url('../images/gods.png');
+  background-position: -220px -35px;
+  background-size: 1300px;
+  flex-grow: 1;
 }
 
 .header--close {
-  -webkit-text-stroke: 1px white;
   cursor: pointer;
+  -webkit-text-stroke: 1px white;
 }
