--- a/css/board.css
+++ b/css/board.css
@@ -59,6 +59,12 @@
 .board--player {
   margin: 24px;
   background-color: rgba(255, 255, 255, .7);
+  opacity: 0.5;
+  transition: opacity 300ms ease;
+}
+
+.board--player-is-active {
+  opacity: 1;
 }
 
 .board--playerNumber {
