--- a/css/board.css
+++ b/css/board.css
@@ -49,6 +49,12 @@
   background-image: url('../images/starcell.png');
 }
 
+.board--dice {
+  display: block;
+  width: 75px;
+  margin: 10px auto 30px;
+}
+
 .board--players {
   font-size: 21px;
   padding: 24px;
@@ -58,9 +64,9 @@
 
 .board--player {
   margin: 24px;
-  background-color: rgba(255, 255, 255, .7);
-  opacity: 0.5;
   transition: opacity 300ms ease;
+  opacity: .5;
+  background-color: white;
 }
 
 .board--player-is-active {
