--- a/css/board.css
+++ b/css/board.css
@@ -64,12 +64,12 @@
 }
 
 .transition-enter {
-  opacity: 0.01;
+  opacity: .01;
 }
 
 .transition-enter.transition-enter-active {
-  opacity: 1;
   transition: opacity 500ms ease-in;
+  opacity: 1;
 }
 
 .transition-leave {
@@ -77,8 +77,8 @@
 }
 
 .transition-leave.example-leave-active {
-  opacity: 0.01;
   transition: opacity 300ms ease-in;
+  opacity: .01;
 }
 
 .board--players {
