--- a/css/custom.css
+++ b/css/custom.css
@@ -220,8 +220,9 @@ body {
   padding: 80px;
   background-color: #ddd;
   background-image: url('../images/gods.png');
-  background-position: -220px -35px;
-  background-size: 1300px;
+  background-repeat: no-repeat;
+  background-position: center -35px;
+  background-size: 1000px;
   flex-grow: 1;
 }
 
